@@ -42,7 +42,10 @@ module Fairy
       "Ruby(%s)ではエンコーディングの指定はできません"
 
     def_exception :NoTmpDir,
-      "fairy用のテンポラリディレクトリが存在しません(CONF.LOG_FILE=%s)"
+      "fairy用のテンポラリディレクトリが存在しません(CONF.TMP_DIR=%s)"
+
+    def_exception :NoLogDir,
+      "fairy用のログディレクトリが存在しません(CONF.LOG_FILE=%s)"
 
 
     module INTERNAL
